Fixed URLs to work with Heroku

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         <div class="container">
             <h2>API - URL Shortener Microservice</h2>
             <h4>Example Input:</h4>
-            <pre>https://blah.herokuapp.com/create/https://www.google.com/</pre>
+            <pre>https://fierce-mesa-81075.herokuapp.com/create/https://www.google.com/</pre>
             <h4>Example Output:</h4>
-            <pre>{ "original_url": "https://www.google.com/", "short_url": "https://blah.herokuapp.com/1" }</pre>
+            <pre>{ "original_url": "https://www.google.com/", "short_url": "https://fierce-mesa-81075.herokuapp.com/1" }</pre>
             <h4>Following example:</h4>
             <h6>Entering:</h6>
-            <pre>Blah</pre>
+            <pre>https://fierce-mesa-81075.herokuapp.com/1</pre>
             <h6>Redirects to:</h6>
-            <pre>Blep</pre>
+            <pre>https://www.google.com/</pre>
         </div>
     </body>
 </html>
